part1/1-11-persisting-data/manifests/ping-pong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dowk-22-ping-pong-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      volumes:
        - name: shared-log
          persistentVolumeClaim:
            claimName: logger-ping-pong-claim
      containers:
        - name: ping-pong-app
          image: jeknom/dowk-22-ping-pong-app:0.2
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: shared-log
              mountPath: /usr/src/app/files
