part1/1-11-persisting-data/manifests/ping-pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dowk-22-ping-pong-app-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-app
  ports:
    - port: 2303
      protocol: TCP
      targetPort: 3000
